update training to control wekinator

--- a/app/public/training/index.html
+++ b/app/public/training/index.html
@@ -73,20 +73,32 @@
       </div>
       <div class="columns medium-6">
         <form id="regForm">
+          <!-- Circles which indicates the steps of the form: -->
+          <div style="text-align:center;margin-bottom:40px;">
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+            <span class="step"></span>
+          </div>
+
           <!-- One "tab" for each step in the form: -->
           <div class="tab">Training Left Hand.
             <p>Move left hand from top left corner to top right corner. Make sure your hand is in the picture!</p>
           </div>
 
-          <div class="tab">Training Left Hand.
+          <div class="tab">Training Left Hand..
             <p>Move left hand from bottom left corner to bottom right corner. Make sure your hand is in the picture!</p>
           </div>
 
-          <div class="tab">Training Left Hand.
+          <div class="tab">Training Left Hand...
             <p>Move left hand from top left corner to bottom left corner. Make sure your hand is in the picture!</p>
           </div>
 
-          <div class="tab">Training Left Hand.
+          <div class="tab">Training Left Hand....
             <p>Move left hand from top right corner to bottom right corner. Make sure your hand is in the picture!</p>
           </div>
 
@@ -95,31 +107,19 @@
             <p>Move right hand from top left corner to top right corner. Make sure your hand is in the picture!</p>
           </div>
 
-          <div class="tab">Training Right Hand.
+          <div class="tab">Training Right Hand..
             <p>Move right hand from bottom left corner to bottom right corner. Make sure your hand is in the picture!</p>
           </div>
 
-          <div class="tab">Training Right Hand.
+          <div class="tab">Training Right Hand...
             <p>Move right hand from top left corner to bottom left corner. Make sure your hand is in the picture!</p>
           </div>
 
-          <div class="tab">Training Right Hand.
+          <div class="tab">Training Right Hand....
             <p>Move right hand from top right corner to bottom right corner. Make sure your hand is in the picture!</p>
           </div>
 
           <button type="button" id="recBtn" class="recBtn button alert">Record</button>
-
-          <!-- Circles which indicates the steps of the form: -->
-          <div style="text-align:center;margin-top:40px;">
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-          </div>
 
           <div style="overflow:auto;">
             <div style="float:right;">
