update keyboard for expo

--- a/app/public/training/index.html
+++ b/app/public/training/index.html
@@ -86,46 +86,43 @@
           </div>
 
           <!-- One "tab" for each step in the form: -->
-          <div class="tab">Train Left Hand - playing
-            <p>Drag your fingers of your LEFT hand across the keys as if you are playing.</p>
-            <p>Make sure your hand is in the picture.</p>
-          </div>
-
-          <div class="tab">Train Left Hand - not playing
-            <p>Hover your fingers of your LEFT hand across the keys as if you are NOT playing the piano.</p>
-            <p>Make sure your hand is in the picture.</p>
-          </div>
-
-          <div class="tab">Training Left Hand - leftmost key
-            <p>play the LEFTMOST key of the piano with your LEFT hand.</p>
-            <p>Make sure your hand is in the picture.</p>
-          </div>
-
-          <div class="tab">Training Left Hand - rightmost key
-            <p>play the RIGHTMOST key of the piano with your LEFT hand.</p>
+          <div class="tab">LEFT HAND - LEFTMOST
+            <p>play the LEFTMOST keys of the piano with your LEFT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
           <!-- One "tab" for each step in the form: -->
-          <div class="tab">Train Right Hand - playing
-            <p>Drag your fingers of your RIGHT hand across the keys as if you are playing.</p>
+          <div class="tab">LEFT HAND - MIDDLE
+            <p>play the MIDDLE keys of the piano with your LEFT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
-          <div class="tab">Train Right Hand - not playing
-            <p>Hover your fingers of your RIGHT hand across the keys as if you are NOT playing the piano.</p>
+          <div class="tab">LEFT HAND - RIGHTMOST
+            <p>play the RIGHTMOST keys of the piano with your LEFT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
-          <div class="tab">Training Right Hand - leftmost key
-            <p>play the LEFTMOST key of the piano with your RIGHT hand.</p>
+          <div class="tab">RIGHT HAND - LEFTMOST
+            <p>play the LEFTMOST keys of the piano with your RIGHT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
-          <div class="tab">Training Right Hand - rightmost key
-            <p>play the RIGHTMOST key of the piano with your RIGHT hand.</p>
+          <!-- One "tab" for each step in the form: -->
+          <div class="tab">RIGHT HAND - MIDDLE
+            <p>play the MIDDLE keys of the piano with your RIGHT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
+
+          <div class="tab">RIGHT HAND - RIGHTMOST
+            <p>play the RIGHTMOST keys of the piano with your RIGHT hand.</p>
+            <p>Make sure your hand is in the picture.</p>
+          </div>
+
+          <div class="tab">NOW TO NOT PLAY
+            <p>Hover both hands above the keyboard, but do not play.</p>
+            <p>Make sure your hand is in the picture.</p>
+          </div>
+
 
           <button type="button" id="recBtn" class="recBtn button alert">Record</button>
 
