--- a/app/public/training/index.html
+++ b/app/public/training/index.html
@@ -14,11 +14,33 @@
     <script src="../libraries/webcam.min.js"></script>
 
     <style> 
-      body {padding: 0; margin: 0;}
+      body {padding: 0; margin: 0;font-size: 1.5rem;}
       .countdown {
         float: right;
-        font-size: 5rem;
+        font-size: 2rem;
+        width: 50px;
       }
+
+      #my_camera {
+        float: left;
+      }
+
+      .rec-button {
+        width: 50px;
+        height: 50px;
+        border: solid 2px black;
+        float: right;
+        border-radius: 50%;
+      }
+
+      .warning {
+        background: yellow;
+      }
+
+      .recording {
+        background: red;
+      }
+
       /* Hide all steps by default: */
       .tab {
         display: none;
@@ -68,8 +90,9 @@
     </div>
     <div class="row">
       <div class="columns medium-6">
-        <span class="countdown"></span>
         <div id="my_camera"></div>
+        <div class="rec-button"></div>
+        <span class="countdown"></span>
       </div>
       <div class="columns medium-6">
         <form id="regForm">
@@ -85,35 +108,35 @@
           </div>
 
           <!-- One "tab" for each step in the form: -->
-          <div class="tab">LEFT HAND - LEFTMOST
+          <div class="tab">
             <p>Hold down the LEFTMOST keys of the piano with your LEFT hand.</p>
             <p>Make sure your hand is in the picture.</p>
             <div style="width:100%;height:0;padding-bottom:31%;position:relative;"><iframe src="https://giphy.com/embed/dtBUVZjBGD6Tzp0dg6" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
           </div>
 
           <!-- One "tab" for each step in the form: -->
-          <div class="tab">LEFT HAND - MIDDLE
+          <div class="tab">
             <p>Hold down the MIDDLE keys of the piano with your LEFT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
-          <div class="tab">LEFT HAND - RIGHTMOST
+          <div class="tab">
             <p>Hold down the RIGHTMOST keys of the piano with your LEFT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
-          <div class="tab">RIGHT HAND - LEFTMOST
+          <div class="tab">
             <p>Hold down the LEFTMOST keys of the piano with your RIGHT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
           <!-- One "tab" for each step in the form: -->
-          <div class="tab">RIGHT HAND - MIDDLE
+          <div class="tab">
             <p>Hold down the MIDDLE keys of the piano with your RIGHT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
 
-          <div class="tab">RIGHT HAND - RIGHTMOST
+          <div class="tab">
             <p>Hold down the RIGHTMOST keys of the piano with your RIGHT hand.</p>
             <p>Make sure your hand is in the picture.</p>
           </div>
