--- a/app/public/keyboard/index.html
+++ b/app/public/keyboard/index.html
@@ -31,7 +31,7 @@
   <script src="keyboardModel.js" type="text/javascript"></script>
   <script src="keyboardView.js" type="text/javascript"></script>
   <script src="keyboardController.js" type="text/javascript"></script>
-  <!--<script src="sketch.js" type="text/javascript"></script>-->
+  <script src="sketch.js" type="text/javascript"></script>
   <script>
     var touched = false;
     var model = new KeyboardModel(),
