--- a/app/public/training/index.html
+++ b/app/public/training/index.html
@@ -7,6 +7,7 @@
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="../libraries/p5.min.js" type="text/javascript"></script>
     <script src="../libraries/foundation/js/vendor/foundation.min.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="../libraries/Tone.js"></script>
@@ -165,6 +166,7 @@
   <script src="trainingModel.js" type="text/javascript"></script>
   <script src="trainingView.js" type="text/javascript"></script>
   <script src="trainingController.js" type="text/javascript"></script>
+  <script src="sketch.js" type="text/javascript"></script>
   <script>
     var touched = false;
     function mousePressed() { if (!touched) {
