--- a/app/public/training/index.html
+++ b/app/public/training/index.html
@@ -165,7 +165,7 @@
   <script src="trainingModel.js" type="text/javascript"></script>
   <script src="trainingView.js" type="text/javascript"></script>
   <script src="trainingController.js" type="text/javascript"></script>
-  <script src="sketch.js" type="text/javascript"></script>
+  <!--<script src="sketch.js" type="text/javascript"></script>-->
   <script>
     var touched = false;
     function mousePressed() { if (!touched) {
