--- a/app/public/keyboard/index.html
+++ b/app/public/keyboard/index.html
@@ -34,6 +34,9 @@
   <script src="sketch.js" type="text/javascript"></script>
   <script>
     var touched = false;
+    function mousePressed() { if (!touched) {
+     getAudioContext().resume(); touched = true} 
+    }
     var model = new KeyboardModel(),
         view = new KeyboardView(model),
         controller = new KeyboardController(model, view);
